--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <option value="friendly">🌸 Friendly</option>
                 </select>
             </div>
-            <div class="complimentText">Choose a category & click "New Compliment" ✨</div>
+            <div class="complimentText">Choose a category & click New Compliment ✨</div>
             <div class="btns">
                 <button class="new">New Compliment</button>
                 <button class="speak">Speak</button>
@@ -57,3 +57,4 @@
 </body>
 
 </html>
+
